<resources>
    <string name="app_name">Проверка знаний</string>
    <string name="title">Переводчик единиц длины</string>
    <string name="km">километров</string>
    <string name="m">метров</string>
    <string name="dm">дециметров</string>
    <string name="sm">сантиметров</string>
    <string name="mm">миллиметров</string>
    <string name="inspect">Проверить</string>
    <string name="goodResult">Good</string>
    <string name="badResult">Bad</string>
</resources>